[package]
name = "rigbysdk"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Rust SDK for the Rigby API (parity with @rigbyhost/sdk-ts)."
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
